2007-03-10  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/project.c:
   Separate New Project dialog from Project Properties dialog.
   Make Properties Filename field read-only, below Name field.
   Capitalize dialog titles.
 * src/utils.c, src/utils.h, src/project.c:
   Make New Project dialog create parent directories of the chosen base
   path if necessary.
   Prevent warnings when setting open dialog directory to a path whose
   parent directory doesn't exist.
   Add create_parent_dirs argument for utils_mkdir().


2007-03-09  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/callbacks.c, src/encodings.c, src/encodings.h, highlighting.c,
   src/msgwindow.c, src/notebook.c, src/project.c, src/sci_cb.c,
   src/search.c, src/tools.c, src/ui_utils.c, src/utils.c:
   Fixed several compiler warnings (mainly shadowing local variables
   and unreachable code).
 * src/sci_cb.c: Auto completion of multi line comments is now (again)
                 configurable with the auto complete constructs option.
 * src/highlighting.c:
   Set default highlighting style for filetype None to get it also
   inverted if invert_all is set.
   Reset all previously defined styles when switching filetype to None.
 * data/filetypes.common, doc/geany.docbook, src/highlighting.c:
   Added style "default" to filetypes.common to be able to change the
   default style for files without a filetype set.



2007-03-09  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/interface.c, doc/geany.docbook, data/filetypes.*, geany.glade:
   Fix indentation spelling.


2007-03-08  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/document.c:
   Fix not setting existing project typenames for C-like files if they
   don't contain typenames themselves (bug introduced in r1323).
 * doc/geany.docbook:
   Updated Templates section for filetype templates and added some
   subsection titles.


2007-03-08  Enrico Tröger  <enrico.troeger@uvena.de>
