@@ -1,3 +1,9 @@
+2007-03-12  Nick Treleaven  <nick.treleaven@btinternet.com>
+
+ * src/build.c:
+   Switch to Compiler window when using Next Error command.
+
+
 2007-03-10  Nick Treleaven  <nick.treleaven@btinternet.com>
 
  * src/project.c:
